[package]
name = "nsqd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NSQ message queue daemon"

[[bin]]
name = "nsqd"
path = "src/main.rs"

[dependencies]
nsq-protocol = { path = "../nsq-protocol" }
nsq-common = { path = "../nsq-common" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
