[package]
name = "nsq_tail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tail NSQ topics like tail -f"

[[bin]]
name = "nsq_tail"
path = "src/main.rs"

[dependencies]
nsq-protocol = { path = "../../nsq-protocol" }
nsq-common = { path = "../../nsq-common" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
